--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,24 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="0dp"
-    android:paddingRight="0dp"
-    android:paddingTop="0dp"
-    android:paddingBottom="0dp"
-    tools:context="com.example.android.popmovies1.MainActivity">
+    android:layout_height="match_parent">
 
-            <GridView
-                android:id="@+id/gridview"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:columnWidth="200dp"
-                android:numColumns="auto_fit"
-                android:verticalSpacing="0dp"
-                android:horizontalSpacing="0dp"
-                android:stretchMode="columnWidth"
-                />
-</LinearLayout>
+    <!--COMPLETED (2) Replace ScrollView and TextView with RecyclerView-->
+    <!--COMPLETED (3) Give the RecyclerView an id of @+id/recyclerview_forecast-->
+    <!--COMPLETED (4) Set the width and the height of the RecyclerView to match_parent-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleViewMovies"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <TextView
+        android:id="@+id/errorMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="@string/error_message"
+        android:textSize="20sp"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/loadingIndicator"
+        android:layout_height="42dp"
+        android:layout_width="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
+
+</FrameLayout>
