--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorBlack">
 
     <!--COMPLETED (2) Replace ScrollView and TextView with RecyclerView-->
     <!--COMPLETED (3) Give the RecyclerView an id of @+id/recyclerview_forecast-->
