--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <data>
+
         <variable
             name="movie"
             type="com.example.android.popmovies1.data.Movie" />
@@ -18,17 +21,6 @@
             android:adjustViewBounds="true"
             android:contentDescription="@string/movie_poster_content_desc"
             android:scaleType="centerCrop" />
-
-        <TextView
-            android:id="@+id/textview_movie_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="100dp"
-            android:text="@{movie.title , default=@string/movie_title_placeholder}"
-            android:textAppearance="@style/WhiteHeader"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageview_movie_poster"
@@ -49,8 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginTop="12dp"
-            android:text="@{movie.release_date, default=@string/movie_date_placeholder}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:text="@{movie.year, default=@string/movie_date_placeholder}"
+            android:textAppearance="@style/Year"
             app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
             app:layout_constraintTop_toBottomOf="@+id/imageview_backdrop" />
 
@@ -64,12 +56,6 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
             app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />
-
-        <android.support.v4.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-        </android.support.v4.widget.NestedScrollView>
 
         <TextView
             android:id="@+id/textview_overview"
@@ -86,6 +72,17 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageview_movie_poster"
             app:layout_constraintVertical_bias="0.508" />
+
+        <TextView
+            android:id="@+id/textview_movie_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="148dp"
+            android:text="@{movie.title , default=@string/movie_title_placeholder}"
+            android:textAppearance="@style/WhiteHeader"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
 </layout>
