--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,9 +10,19 @@
     </style>
 
     <style name="WhiteHeader" parent="TextAppearance.AppCompat">
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:textSize">30sp</item>
-        <item name="android:layout_gravity">bottom</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:textSize">30sp</item>
+    <item name="android:gravity">bottom|left</item>
+    <item name="android:shadowColor">#000000</item>
+    <item name="android:shadowDx">5</item>
+    <item name="android:shadowDy">5</item>
+    <item name="android:shadowRadius">10</item>
+</style>
+
+    <style name="Year" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#288ec9</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:textStyle">bold</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
