--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -20,7 +20,10 @@
             android:layout_height="200dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/movie_poster_content_desc"
-            android:scaleType="centerCrop" />
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="0dp" />
 
         <ImageView
             android:id="@+id/imageview_movie_poster"
@@ -33,14 +36,14 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textview_movie_title"
-            app:layout_constraintVertical_bias="0.15" />
+            app:layout_constraintVertical_bias="0.063" />
 
         <TextView
             android:id="@+id/textview_release_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="44dp"
             android:text="@{movie.year, default=@string/movie_date_placeholder}"
             android:textAppearance="@style/Year"
             app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
@@ -76,10 +79,9 @@
         <TextView
             android:id="@+id/textview_movie_title"
             android:layout_width="374dp"
-            android:layout_height="180dp"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_height="104dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="96dp"
             android:text="@{movie.title , default=@string/movie_title_placeholder}"
             android:textAppearance="@style/WhiteHeader"
             app:layout_constraintStart_toStartOf="parent"
