saved instance state plus code cleanup

--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -4,94 +4,91 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
-        <variable
-            name="movie"
-            type="com.example.android.popmovies1.data.Movie" />
+        <variable name="movie" type="com.example.android.popmovies1.data.Movie" />
     </data>
-<android.support.v4.widget.NestedScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <android.support.constraint.ConstraintLayout
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageview_backdrop"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/movie_poster_content_desc"
-            android:scaleType="centerCrop"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageview_movie_poster"
-            android:layout_width="150dp"
-            android:layout_height="209dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/movie_poster_content_desc"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textview_movie_title"
-            app:layout_constraintVertical_bias="0.068" />
+            <ImageView
+                android:id="@+id/imageview_backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/movie_poster_content_desc"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textview_release_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="44dp"
-            android:text="@{movie.year, default=@string/movie_date_placeholder}"
-            android:textAppearance="@style/Year"
-            app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
-            app:layout_constraintTop_toBottomOf="@+id/imageview_backdrop" />
+            <ImageView
+                android:id="@+id/imageview_movie_poster"
+                android:layout_width="150dp"
+                android:layout_height="209dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/movie_poster_content_desc"
+                android:scaleType="centerCrop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_movie_title"
+                app:layout_constraintVertical_bias="0.068" />
 
-        <TextView
-            android:id="@+id/textview_vote_average"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="16dp"
-            android:text="@{movie.vote, default=@string/movie_vote_placeholder}"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
-            app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />
+            <TextView
+                android:id="@+id/textview_release_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="44dp"
+                android:text="@{movie.year, default=@string/movie_date_placeholder}"
+                android:textAppearance="@style/Year"
+                app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
+                app:layout_constraintTop_toBottomOf="@+id/imageview_backdrop" />
 
-        <TextView
-            android:id="@+id/textview_overview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:text="@{movie.overview, default=@string/movie_overview_placeholder}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageview_movie_poster"
-            app:layout_constraintVertical_bias="0.166" />
+            <TextView
+                android:id="@+id/textview_vote_average"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:text="@{movie.vote, default=@string/movie_vote_placeholder}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
+                app:layout_constraintTop_toBottomOf="@+id/textview_release_date" />
+
+            <TextView
+                android:id="@+id/textview_overview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:text="@{movie.overview, default=@string/movie_overview_placeholder}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageview_movie_poster"
+                app:layout_constraintVertical_bias="0.166" />
 
 
-        <TextView
-            android:id="@+id/textview_movie_title"
-            android:layout_width="374dp"
-            android:layout_height="151dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginStart="4dp"
-            android:gravity="bottom|left"
-            android:text="@{movie.title , default=@string/movie_title_placeholder}"
-            android:textAppearance="@style/WhiteHeader"
-            app:layout_constraintBottom_toBottomOf="@+id/imageview_backdrop"
-            app:layout_constraintStart_toStartOf="parent" />
+            <TextView
+                android:id="@+id/textview_movie_title"
+                android:layout_width="374dp"
+                android:layout_height="151dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="4dp"
+                android:gravity="bottom|start"
+                android:text="@{movie.title , default=@string/movie_title_placeholder}"
+                android:textAppearance="@style/WhiteHeader"
+                app:layout_constraintBottom_toBottomOf="@+id/imageview_backdrop"
+                app:layout_constraintStart_toStartOf="parent" />
 
-    </android.support.constraint.ConstraintLayout>
-</android.support.v4.widget.NestedScrollView>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
 </layout>
