--- a/app/src/main/res/layout/moviehomelayout.xml
+++ b/app/src/main/res/layout/moviehomelayout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"    >
@@ -9,6 +10,6 @@
         android:layout_width="215dp"
         android:layout_height="300dp"
         android:contentDescription="@string/movie_poster_content_desc"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerCrop"/>
 
 </LinearLayout>
