--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -86,20 +86,15 @@
                 android:visibility="visible"
                 app:layout_constraintTop_toBottomOf="@+id/textview_overview" />
 
-            <TextView
-                android:id="@+id/trailers"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Additional Text"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycleViewTrailers"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/divider1" />
-
 
             <TextView
                 android:id="@+id/textview_movie_title"
