--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -31,13 +31,12 @@
                 android:layout_width="150dp"
                 android:layout_height="209dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="25dp"
                 android:contentDescription="@string/movie_poster_content_desc"
                 android:scaleType="centerCrop"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textview_movie_title"
-                app:layout_constraintVertical_bias="0.068" />
+                app:layout_constraintStart_toStartOf="@+id/textview_movie_title"
+                app:layout_constraintTop_toBottomOf="@+id/textview_movie_title" />
 
             <TextView
                 android:id="@+id/textview_release_date"
@@ -70,11 +69,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:text="@{movie.overview, default=@string/movie_overview_placeholder}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageview_movie_poster"
-                app:layout_constraintVertical_bias="0.166" />
+                app:layout_constraintTop_toBottomOf="@+id/imageview_movie_poster" />
 
             <View
                 android:id="@+id/divider1"
@@ -86,15 +81,65 @@
                 android:visibility="visible"
                 app:layout_constraintTop_toBottomOf="@+id/textview_overview" />
 
+            <TextView
+                android:id="@+id/textview_trailer_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Trailers"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                app:layout_constraintStart_toStartOf="@+id/divider1"
+                app:layout_constraintTop_toBottomOf="@+id/divider1" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycleViewTrailers"
-                android:layout_gravity="center"
+                android:layout_gravity="left"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/divider1" />
+                app:layout_constraintTop_toBottomOf="@+id/textview_trailer_header" />
+
+            <View
+                android:id="@+id/divider2"
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:background="#000000"
+                android:visibility="visible"
+                app:layout_constraintTop_toBottomOf="@+id/recycleViewTrailers" />
+
+            <TextView
+                android:id="@+id/textview_review_header"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reviews"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                app:layout_constraintStart_toStartOf="@+id/divider2"
+                app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycleViewReviews"
+                android:layout_gravity="left"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toBottomOf="@+id/textview_review_header" />
 
             <TextView
                 android:id="@+id/textview_movie_title"
