--- a/app/src/main/res/layout/trailer_layout.xml
+++ b/app/src/main/res/layout/trailer_layout.xml
@@ -11,27 +11,28 @@
     <LinearLayout
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"    >
+    android:gravity="left"    >
 
         <TextView
             android:id="@+id/textview_trailer_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:text="@{trailer.type, default=@string/movie_overview_placeholder}"/>
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="10dp"
+            android:text="@{trailer.type, default=@string/movie_overview_placeholder}"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-        <TextView
-            android:id="@+id/textview_type2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
-            android:text="This is a test"/>
+        <ImageView
+            android:id="@+id/movie_trailer_thumbnail"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:contentDescription="@string/movie_trailer_thumbnail"
+            app:imageUrl="@{trailer.imageUrl}"
+            android:scaleType="centerCrop"/>
 
     </LinearLayout>
 </layout>
