--- a/app/src/main/res/layout/moviehomelayout.xml
+++ b/app/src/main/res/layout/moviehomelayout.xml
@@ -17,12 +17,14 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="135dp"
+        android:layout_marginLeft="135dp"
         android:layout_marginTop="5dp"
         android:contentDescription="@string/favorite"
         android:src="@drawable/heart"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
 
 </RelativeLayout>
