--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -17,7 +17,7 @@
             <ImageView
                 android:id="@+id/imageview_backdrop"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="@dimen/twohundred"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/movie_poster_content_desc"
                 android:scaleType="centerCrop"
@@ -28,11 +28,11 @@
 
             <ImageView
                 android:id="@+id/imageview_favorite"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="28dp"
-                android:layout_marginRight="28dp"
+                android:layout_width="@dimen/fifty"
+                android:layout_height="@dimen/fifty"
+                android:layout_marginBottom="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/twentyeight"
+                android:layout_marginRight="@dimen/twentyeight"
                 android:contentDescription="@string/favorite"
                 android:src="@drawable/heart"
                 android:visibility="invisible"
@@ -42,11 +42,11 @@
 
             <ImageView
                 android:id="@+id/imageview_movie_poster"
-                android:layout_width="150dp"
-                android:layout_height="209dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginTop="25dp"
+                android:layout_width="@dimen/onefifty"
+                android:layout_height="@dimen/twohundrednine"
+                android:layout_marginStart="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/sixteen"
+                android:layout_marginTop="@dimen/twentyfive"
                 android:contentDescription="@string/movie_poster_content_desc"
                 android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="@+id/textview_movie_title"
@@ -56,9 +56,9 @@
                 android:id="@+id/textview_release_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="44dp"
+                android:layout_marginStart="@dimen/twentyfour"
+                android:layout_marginLeft="@dimen/twentyfour"
+                android:layout_marginTop="@dimen/fourtyfour"
                 android:text="@{movie.release_date, default=@string/movie_date_placeholder}"
                 android:textAppearance="@style/Year"
                 app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
@@ -68,9 +68,9 @@
                 android:id="@+id/textview_vote_average"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="@dimen/twentyfour"
+                android:layout_marginLeft="@dimen/twentyfour"
+                android:layout_marginTop="@dimen/sixteen"
                 android:text="@{movie.vote, default=@string/movie_vote_placeholder}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintStart_toEndOf="@+id/imageview_movie_poster"
@@ -80,9 +80,9 @@
                 android:id="@+id/button_favorite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginLeft="24dp"
-                android:layout_marginTop="13dp"
+                android:layout_marginStart="@dimen/twentyfour"
+                android:layout_marginLeft="@dimen/twentyfour"
+                android:layout_marginTop="@dimen/thirteen"
                 android:text="@string/add_to_favorites"
                 android:onClick="updateFavorite"
                 app:layout_constraintTop_toBottomOf="@+id/textview_vote_average"
@@ -93,19 +93,19 @@
                 android:id="@+id/textview_overview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginBottom="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/sixteen"
+                android:layout_marginStart="@dimen/sixteen"
+                android:layout_marginTop="@dimen/sixteen"
                 android:text="@{movie.overview, default=@string/movie_overview_placeholder}"
                 app:layout_constraintTop_toBottomOf="@+id/imageview_movie_poster" />
 
             <View
                 android:id="@+id/divider1"
                 android:layout_width="wrap_content"
-                android:layout_height="2dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
+                android:layout_height="@dimen/two"
+                android:layout_marginTop="@dimen/twenty"
+                android:layout_marginBottom="@dimen/twenty"
                 android:background="#000000"
                 android:visibility="visible"
                 app:layout_constraintTop_toBottomOf="@+id/textview_overview" />
@@ -115,10 +115,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/trailers"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="@dimen/ten"
+                android:layout_marginBottom="@dimen/ten"
+                android:layout_marginStart="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/sixteen"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 app:layout_constraintStart_toStartOf="@+id/divider1"
                 app:layout_constraintTop_toBottomOf="@+id/divider1" />
@@ -126,10 +126,10 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycleViewTrailers"
                 android:layout_gravity="start"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="@dimen/ten"
+                android:layout_marginBottom="@dimen/ten"
+                android:layout_marginStart="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/sixteen"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_trailer_header" />
@@ -138,7 +138,7 @@
                 android:id="@+id/trailererror"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
+                android:padding="@dimen/sixteen"
                 android:text="@string/notrailers"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:visibility="invisible"
@@ -147,11 +147,11 @@
             <View
                 android:id="@+id/divider2"
                 android:layout_width="wrap_content"
-                android:layout_height="2dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_height="@dimen/two"
+                android:layout_marginTop="@dimen/twenty"
+                android:layout_marginBottom="@dimen/twenty"
+                android:layout_marginStart="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/sixteen"
                 android:background="#000000"
                 android:visibility="visible"
                 app:layout_constraintTop_toBottomOf="@+id/trailererror" />
@@ -161,10 +161,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/reviews"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="@dimen/ten"
+                android:layout_marginBottom="@dimen/ten"
+                android:layout_marginStart="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/sixteen"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 app:layout_constraintStart_toStartOf="@+id/divider2"
                 app:layout_constraintTop_toBottomOf="@+id/divider2" />
@@ -172,10 +172,10 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycleViewReviews"
                 android:layout_gravity="start"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginTop="@dimen/ten"
+                android:layout_marginBottom="@dimen/ten"
+                android:layout_marginStart="@dimen/sixteen"
+                android:layout_marginEnd="@dimen/sixteen"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toBottomOf="@+id/textview_review_header" />
@@ -184,7 +184,7 @@
                 android:id="@+id/reviewerror"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="16dp"
+                android:padding="@dimen/sixteen"
                 android:text="@string/noreviews"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:visibility="invisible"
@@ -193,11 +193,11 @@
 
             <TextView
                 android:id="@+id/textview_movie_title"
-                android:layout_width="374dp"
-                android:layout_height="151dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
+                android:layout_width="@dimen/threesevenfour"
+                android:layout_height="@dimen/onefiveone"
+                android:layout_marginBottom="@dimen/eight"
+                android:layout_marginStart="@dimen/four"
+                android:layout_marginEnd="@dimen/four"
                 android:gravity="bottom|start"
                 android:text="@{movie.title , default=@string/movie_title_placeholder}"
                 android:textAppearance="@style/WhiteHeader"
