--- a/app/src/main/res/layout/trailer_layout.xml
+++ b/app/src/main/res/layout/trailer_layout.xml
@@ -18,19 +18,19 @@
             android:id="@+id/textview_trailer_type"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginBottom="@dimen/ten"
+            android:layout_marginEnd="@dimen/sixteen"
+            android:layout_marginStart="@dimen/sixteen"
+            android:layout_marginTop="@dimen/ten"
             android:text="@{trailer.type, default=@string/movie_overview_placeholder}"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <ImageView
             android:id="@+id/movie_trailer_thumbnail"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_width="120dp"
-            android:layout_height="90dp"
+            android:layout_marginEnd="@dimen/sixteen"
+            android:layout_marginStart="@dimen/sixteen"
+            android:layout_width="@dimen/onetwozero"
+            android:layout_height="@dimen/ninty"
             android:contentDescription="@string/movie_trailer_thumbnail"
             app:imageUrl="@{trailer.imageUrl}"
             android:scaleType="centerCrop"
