--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,28 @@
     <dimen name="activity_horizontal_margin">10dp</dimen>
     <dimen name="activity_vertical_margin">10dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="sixteen">16dp</dimen>
+    <dimen name="fourtytwo">42dp</dimen>
+    <dimen name="twohundred">200dp</dimen>
+    <dimen name="fifty">50dp</dimen>
+    <dimen name="twentyeight">28dp</dimen>
+    <dimen name="onefifty">150dp</dimen>
+    <dimen name="twohundrednine">209dp</dimen>
+    <dimen name="twentyfive">25dp</dimen>
+    <dimen name="twentyfour">24dp</dimen>
+    <dimen name="fourtyfour">44dp</dimen>
+    <dimen name="thirteen">13dp</dimen>
+    <dimen name="two">2dp</dimen>
+    <dimen name="twenty">20dp</dimen>
+    <dimen name="ten">10dp</dimen>
+    <dimen name="threesevenfour">374dp</dimen>
+    <dimen name="onefiveone">151dp</dimen>
+    <dimen name="eight">8dp</dimen>
+    <dimen name="four">4dp</dimen>
+    <dimen name="twofifteen">215dp</dimen>
+    <dimen name="threehundred">300dp</dimen>
+    <dimen name="onethreefive">135dp</dimen>
+    <dimen name="five">5dp</dimen>
+    <dimen name="onetwozero">120dp</dimen>
+    <dimen name="ninty">90dp</dimen>
 </resources>
